2016-12-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl: Set '$Texinfo::XSLoader::disable_XS'
	instead of '$Texinfo::Paragraph::disable_XS'.

2016-12-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_def): Avoid an unnecessary
	call to 'parse_texi_line'.

2016-12-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_end_line) <@include> If in the tests, 
	strip off leading directories when recording filename.  This is 
	to be consistent with what is done in 'parse_texi_file'.

2016-12-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_def): Instead of calling 'gdt' on 
	inserted text, add an 'untranslated' element containing the 
	untranslated text.
	* tp/Texinfo/Convert/HTML.pm (_convert),
	* tp/Texinfo/Convert/Text.pm (_convert):,
	For 'untranslated' elements, call 'gdt' on the text.

	This results in some changes to the test results:
	  Strings not translated in the results from Text.pm, but they
	weren't properly translated before either.
	  Strings inside @copying translated according to document
	language at time of @insertcopying, not time of @copying.


2016-12-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (%def_map): Don't surround values 
	containing spaces with braces.
	* tp/Texinfo/Parser.pm (_parse_def): Always create a 'bracketed' 
	element to contain prepended text.

2016-12-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Text.pm (_convert): Delete disabled code 
	used for debugging.

2016-12-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (do_index_keys): Explicitly list the 
	commands to get the text of index entries for.

2016-12-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_end_line): For some index commands
	(e.g., @defcv), do not record the text of the index entry in
	order to avoid needing to call Texinfo::Report::gdt, which