@@ -1,5 +1,10 @@
 2016-12-24  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* tp/Texinfo/Convert/Plaintext.pm (_count_added): Inline call
+	to _add_lines_count and use variable to shorten expressions.
+
+2016-12-24  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* tp/texi2any.pl: Set '$Texinfo::XSLoader::disable_XS'
 	instead of '$Texinfo::Paragraph::disable_XS'.
 
